--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 6%;
+    border: 1px solid #000;
 }
 
 .container nav > h1{
@@ -177,7 +178,7 @@ nav{
 }
 
 .tambah-story .btn-desk{
-    margin-left: 4em;
+    margin-left: 10em;
 }
 
 .btn-desk .garis{
@@ -205,7 +206,12 @@ nav{
     margin: 1rem 0 1rem 0;
     padding: 1em 3em;
     border-radius: 0.5rem;
-    background-color: brown;    
+    background-color: brown;  
+    transform: box-shadow 0.5s;  
+}
+
+.btn-desk > button:hover{
+    box-shadow: 0 0 20px brown;
 }
 
 .btn-desk button > a{
@@ -237,6 +243,7 @@ nav{
 
 .tambah-section-porto  ul > li{
     border: 1px solid #000;
+    border-radius: 1rem;
     min-width: 30vh;
     height: 30vh;
     margin: 4rem;;
