--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ nav > h1{
     text-align: center;
     justify-content: center;
     align-items:center;
-    border: 1px solid #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 10);
 }
 
 .hero p{
@@ -227,7 +227,6 @@ nav > h1{
 }
 
 .section-porto{
-    border: 1px solid #000;
     min-height: 80vh;
     display: flex;
     flex-direction: column;
@@ -243,22 +242,75 @@ nav > h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #000;
 }
 
-.tambah-section-porto  ul > li{
-    border: 1px solid #000;
-    border-radius: 1rem;
-    min-width: 30vh;
-    height: 30vh;
+.tambah-section-porto  ul > .tambah-atas{
+    padding: 1rem;
+    max-width: 45vh;
+    height: 60vh;
     margin: 4rem;;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 10);
 }
 
-.tambah-section-porto ul li > .img{
+.tambah-section-porto ul .tambah-atas > .img{
     min-height: 50%;
     width: auto;
-    border: 1px solid #000;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 10);
 }
+
+.tambah-section-porto ul .satu{
+    background-image: url('porto1.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.tambah-section-porto ul .tambah-dal > ul{
+    display: flex;
+    align-items: center;
+}
+
+.tambah-section-porto .tambah-atas  > h2{   
+    margin-top: 1rem;
+}
+
+.tambah-section-porto ul .tambah-dal ul > li{
+    background-color: #2b2d42;
+    margin-right: 1rem;
+    font-size: 0.8rem;
+    padding: 0.2em 0.5rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    transition: box-shadow 0.3s;
+}
+
+.tambah-section-porto ul .tambah-dal ul > li:hover{
+    box-shadow:0 0 10px #2b2d42;
+}
+
+.tambah-section-porto ul .tambah-dal > p{
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+.tambah-section-porto ul .tambah-dal span > a{
+    border: 1px solid #000;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    color: #fff;
+    background-color: #2b2d42;
+    transition: box-shadow 0.3s;
+}
+
+.tambah-section-porto ul .tambah-dal span > a:hover{
+    box-shadow:0 0 10px #2b2d42;
+}
+
+
 
 
 
