--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ nav > h1{
 }
 
 .hero > h1{
-    font-size: 9rem;
+    font-size: 8rem;
     font-weight: 1000;
     z-index: 0;
     color: #2b2d42;
@@ -252,6 +252,7 @@ nav > h1{
     display: flex;
     flex-direction: column;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 10);
+    border-radius: 1rem;
 }
 
 .tambah-section-porto ul .tambah-atas > .img{
@@ -273,6 +274,7 @@ nav > h1{
 
 .tambah-section-porto .tambah-atas  > h2{   
     margin-top: 1rem;
+    color: brown;
 }
 
 .tambah-section-porto ul .tambah-dal ul > li{
@@ -283,11 +285,26 @@ nav > h1{
     color: #fff;
     display: flex;
     align-items: center;
-    transition: box-shadow 0.3s;
+    transition: box-shadow 0.3s, color 0.3s, background-color 0.3;
 }
 
+.tambah-section-porto ul .tambah-dal ul > .css{
+    transition: color 0.3s;
+}
+
+.tambah-section-porto ul .tambah-dal ul > .css:hover{
+    color: #00CED1;
+}
+
+.tambah-section-porto ul .tambah-dal ul > .js{
+    transition: color 0.3s;
+}
+.tambah-section-porto ul .tambah-dal ul > .js:hover{
+    color: yellow;
+}
 .tambah-section-porto ul .tambah-dal ul > li:hover{
     box-shadow:0 0 10px #2b2d42;
+    color: #FF8C00;
 }
 
 .tambah-section-porto ul .tambah-dal > p{
@@ -308,6 +325,19 @@ nav > h1{
 
 .tambah-section-porto ul .tambah-dal span > a:hover{
     box-shadow:0 0 10px #2b2d42;
+}
+
+
+.tambah-section-porto ul .dua{
+    background-image: url('porto2.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.tambah-section-porto ul .tiga{
+    background-image: url('porto3.png');
+    background-size: cover;
+    background-position: center;
 }
 
 
