--- a/style.css
+++ b/style.css
@@ -62,7 +62,34 @@ nav > h1{
     font-size: 1rem;
     color: #000;
     font-weight: 500;
+    position: relative;
+    transition: color 0.3s;
+
 }
+
+.tambah ul li > a:hover{
+    color: brown;
+}
+
+.tambah ul li > a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: brown;
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0); 
+    transform-origin: right;
+    transition: transform 0.3s ease; 
+  }
+  
+  .tambah ul li > a:hover::before {
+    transform: scaleX(1); 
+    transform-origin: left;
+    background-color: brown;
+    color: brown; 
+  }
 
 .hero {
     padding: 1rem 6%;
@@ -384,14 +411,68 @@ nav > h1{
     animation: efeklompat 2s infinite;
 }
 
-.section-porto a h3 > span {
+.container-fot{
+    min-height: 50vh;
+    background-color: brown;
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.container-fot ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-fot ul li{
+    margin: 1rem;
+}
+
+.container-fot ul li > a{
+    color:#fff;
+}
+
+.container-fot .sosmed li a > .besar{
+    color: brown;
     background-color: #fff;
-    color: #000;
-    padding: 0.1px 4px;
+    font-size: 1.5rem;
+    padding: 1rem 1rem;
+    border-radius: 1rem;
+    transition: color 0.3s, background-color 0.3s,border 0.3s,border-radius 0.3s;
+}
+
+.container-fot .sosmed li a > .besar:hover{
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
     border-radius: 2rem;
-    font-weight: 500;
-    font-size:1rem;
-    margin-left: 1rem;
+}
+
+.container-fot .tambah-fot .Nav-fot li > a{
+    position: relative;
+}
+
+.container-fot .tambah-fot .Nav-fot li > a::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease;
+}
+
+.container-fot .tambah-fot .Nav-fot li > a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+    background-color: #fff;
 }
 
 
