--- a/about/style.css
+++ b/about/style.css
@@ -19,11 +19,11 @@ body {
     background-color: #fff;
     color: #000;
     font-family: 'Poppins', sans-serif;
+    min-height: 999vh;
 }
 
 .container-nav{
     display: flex;
-    border: 1px solid #000;
     justify-content: space-between;
     padding: 1rem 6%;
     position: sticky;
@@ -84,33 +84,67 @@ body {
 }
 
 .sect-about{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 90vh;
+    min-height: 100vh;
     padding: 1rem 6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.sect-about .bg-img{
+.sect-about .flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+.sect-about .flex .bg-img{
     background-color: brown;
-    min-height: 70vh;
-    width: 40vh;
+    min-height: 60vh;
+    width: 35vh;
     border-radius: 1rem;
 }
 
-.sect-about .bg-img > .img{
+.sect-about .flex .bg-img > .img{
     background-image: url('/akuwarna.jpeg');
     background-size: cover;
     background-position: center;
-    min-height: 70vh;
-    width: 40vh;
+    min-height: 60vh;
+    width: 35vh;
     transform: rotate(5deg);
     border-radius: 1rem;
     transition: transform 0.3s;
 }
 
-.sect-about .bg-img > .img:hover{
+.sect-about .flex .bg-img > .img:hover{
     transform: rotate(0deg);
+}
+
+.sect-about .flex .text-dal > h2{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.sect-about .flex .text-dal h2 > span{
+    color: brown;
+}
+
+.sect-about .flex .text-dal .dal-1 > .dalam-2 {
+    color: brown;
+    font-weight: 500;
+}
+
+.sect-about .flex > .text-dal{
+    max-width: 100vh;
+    height: auto;
+}
+
+
+.sect-about .scroll{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
 }
 
 
