--- a/about/style.css
+++ b/about/style.css
@@ -22,6 +22,10 @@ body {
     min-height: 999vh;
 }
 
+section{
+    margin-top: 2rem;
+}
+
 .container-nav{
     display: flex;
     justify-content: space-between;
@@ -145,6 +149,55 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 4rem;
+    animation: lompat 1.3s infinite;
+}
+
+.sect-skill {
+    min-height: 100vh;
+    border: 1px solid #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 6%;
+}
+
+.sect-skill .dal-skill ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vh;
+    height: 50vh;
+    border: 1px solid;
+}
+
+.sect-skill .dal-skill ul > li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 3rem;
+    min-width: 20vh;
+    height: 20vh;
+    border: 1px solid #000;
+    margin-bottom: 2rem;
+}
+
+.sect-skill .dal-skill ul li > .dal-sect-sk {
+    font-size: 2rem;
+    padding: 0.5em;
+    border: 1px solid #000;
+    border-radius: 3rem;
+}
+
+@keyframes lompat{
+    0%, 20%, 50%, 80%, 100%{
+        transform: translateY(0);
+    } 40% {
+        transform: translateY(-20px);
+    } 60% {
+        transform: translateY(-10px);
+    }
 }
 
 
