--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ nav > h1{
 .container-fot{
     min-height: 50vh;
     background-color: brown;
-    margin-top: 10rem;
+    margin-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -479,6 +479,74 @@ nav > h1{
     transform-origin: left;
     background-color: #fff;
 }
+
+.container-con {
+    padding: 1rem 6%;
+    margin-top: 4rem;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-con h1{
+    color: #2b2d42;
+    font-size: 2.5em;
+}
+
+.container-con .tambah-con > ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.container-con .tambah-con ul > li{
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    min-width: 55vh;
+    height: 20vh;
+    margin-right: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 0.4px 5px rgba(100, 0, 0, 10);
+    transition: box-shadow 0.3s;
+}
+
+.container-con .tambah-con ul > li:hover{
+    box-shadow: 0 10px 10px rgba(100, 0, 0, 10);
+}
+
+.container-con .tambah-con ul li .img{
+    min-width: 10vh;
+    height: 10vh;
+    margin-right: 2rem;
+    margin-left: 1rem;
+}
+
+.container-con .tambah-con ul li > .wa{
+    background-image: url('wa.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.container-con .tambah-con ul li > .gmail{
+    background-image: url('gmail.png');
+    background-size: cover;
+    background-position:center;
+}
+
+.container-con .tambah-con ul li > .tele{
+    background-image: url('telegram.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.container-con .tambah-con ul li .desk-con > .link-con{
+    color: brown;
+    font-weight: 500;
+}
+
 
 
 
