--- a/about/style.css
+++ b/about/style.css
@@ -109,7 +109,7 @@ section{
 }
 
 .sect-about .flex .bg-img > .img{
-    background-image: url('/akuwarna.jpeg');
+    background-image: url('../akuwarna.jpeg');
     background-size: cover;
     background-position: center;
     min-height: 60vh;
